--- a/index.html
+++ b/index.html
@@ -5,32 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ronaldo Nóbrega</title>
     <script src="https://kit.fontawesome.com/cc1d22dd0b.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./Assets/imgTittle.png">
     <link rel="stylesheet" href="./styles.css">
+    <title>Ronaldo Nóbrega</title>
 </head>
 
 <body>
     <div class="box">
-        <div>
-           <h2 id="portifolio">Portifólio</h2>
-        
+        <nav>
+           <h2 class="portifolio">Portifó<span>lio</span></h2>
            <ul>
-                <li><a class="menu" href="#inicio">Início</a></li>
-                <li><a class="menu" href="#sobre">Sobre</a></li>
-                <li><a class="menu" href="#projetos">Projetos</a></li>
-                <li><a class="menu" href="#contato">Contato</a></li>
+                <li><a class="menu" href="#inicio" style="text-decoration:none">Início</a></li>
+                <li><a class="menu" href="#sobre" style="text-decoration:none">Sobre mim</a></li>
+                <li><a class="menu" href="#projetos" style="text-decoration:none">Projetos</a></li>
+                <li><a class="menu" href="#contato" style="text-decoration:none">Fale comigo</a></li>
             </ul>
-        </div>
+        </nav>
 
-        <div>
-            <h1>Ronaldo Nóbrega</h1>
+        <div class="divNome">
+            <h1>Ronaldo <span>Nóbrega</span></h1>
             <h3>Desenvolvedor Front-End</h3>
         </div>
     </div>
 
-    <section>
+    <section class="sobreMim">
         <img src="./Assets/ImgRonaldo.jpeg">
         <div>
             <h2>Sobre mim</h2>
