--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <div class="box">
+    <div class="box" id="Início">
         <nav>
            <h2 class="portifolio">Portifó<span>lio</span></h2>
            <ul>
                 <li><a class="menu" href="#inicio" style="text-decoration:none">Início</a></li>
-                <li><a class="menu" href="#sobre" style="text-decoration:none">Sobre mim</a></li>
-                <li><a class="menu" href="#projetos" style="text-decoration:none">Projetos</a></li>
+                <li><a class="menu" href="#Sobre mim" style="text-decoration:none">Sobre mim</a></li>
+                <li><a class="menu" href="#Projetos" style="text-decoration:none">Projetos</a></li>
                 <li><a class="menu" href="#contato" style="text-decoration:none">Fale comigo</a></li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <section class="sobreMim">
+    <section class="sobreMim" id="Sobre mim">
         <img src="./Assets/ImgRonaldo.jpeg">
         <div>
             <h2>Sobre mim</h2>
@@ -38,20 +38,24 @@
         </div>
     </section>
 
-    <section>
+    <section class="projetos" id="Projetos">
         <h2>Projetos</h2>
         <div>
             <div>
-                Projeto 1
+                Projeto 1<br>
+                <img src="./Assets/emBreve.png">
             </div>
 
             <div>
-                Projeto 2
+                Projeto 2<br>
+                <img src="./Assets/emBreve.png">
             </div>
 
             <div>
-                Projeto 3
+                Projeto 3<br>
+                <img src="./Assets/emBreve.png">
             </div>
+            
         </div>
     </section>
 
@@ -62,7 +66,7 @@
             <i class="fa-brands fa-whatsapp"></i>
         </a> 
         <a href="https://www.linkedin.com/in/ronaldo-n%C3%B3brega/" target="_blank">
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin" width:50px;></i>
         </a>
         <a href="https://github.com/RonaldoNobrega1" target="_blank">
             <i class="fa-brands fa-github"></i>
