--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <i class="fa-brands fa-whatsapp"></i>
         </a> 
         <a href="https://www.linkedin.com/in/ronaldo-n%C3%B3brega/" target="_blank">
-            <i class="fa-brands fa-linkedin" width:50px;></i>
+            <i class="fa-brands fa-linkedin"></i>
         </a>
         <a href="https://github.com/RonaldoNobrega1" target="_blank">
             <i class="fa-brands fa-github"></i>
