Alteração de fonte e adicionado novas IMG's

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://kit.fontawesome.com/cc1d22dd0b.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./Assets/imgTittle.png">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
     <title>Ronaldo Nóbrega</title>
 </head>
 
@@ -41,17 +44,17 @@
     <section class="projetos" id="Projetos">
         <h2>Projetos</h2>
         <div>
-            <div>
+            <div id="projeto1">
                 Projeto 1<br>
                 <img src="./Assets/emBreve.png">
             </div>
 
-            <div>
+            <div id="projeto2">
                 Projeto 2<br>
                 <img src="./Assets/emBreve.png">
             </div>
 
-            <div>
+            <div id="projeto3">
                 Projeto 3<br>
                 <img src="./Assets/emBreve.png">
             </div>
@@ -63,14 +66,15 @@
         <h3>Ronaldo Nóbrega</h3>
 
         <a href="https://wa.me/5583999849997" target="_blank">
-            <i class="fa-brands fa-whatsapp"></i>
-        </a> 
-        <a href="https://www.linkedin.com/in/ronaldo-n%C3%B3brega/" target="_blank">
-            <i class="fa-brands fa-linkedin"></i>
+            <img id="imgWhats" src="./Assets/whatsap.png">
         </a>
         <a href="https://github.com/RonaldoNobrega1" target="_blank">
-            <i class="fa-brands fa-github"></i>
+            <img id="imgGit" src="./Assets/github.png">
         </a>
+        <a href="https://www.linkedin.com/in/ronaldo-n%C3%B3brega/" target="_blank">
+            <img id="imgLinkedin" src="./Assets/linkedin.png">
+        </a>
+
         
     </footer>
 </body>
